...
              library: 'MaterialIcons',
              name: 'chevron-left',
              size: 20,
            },
          },
          {
            label: 'Próximo',
            enabled: !isCheckingName,
            icon: {
              library: 'MaterialIcons',
              name: 'chevron-right',
              size: 20,
            },
...
