...
          <FancyButton
            label='Cancelar'
            type='outlined'
            onPress={onButton1Press}
            containerStyle={styles.button}
          />
          <FancyButton label='Confirmar' onPress={onButton2Press} containerStyle={styles.button} />
        </View>
      }
    >
      <ControlledSearchSelect
        name='id'
        label={mode === 'add' ? 'Funções' : 'Função'}
...
